--- a/WPF/SAM.Analytical.UI.WPF/Windows/ApertureToPanelRatiosWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/ApertureToPanelRatiosWindow.xaml
@@ -1,17 +1,17 @@
-﻿<Window x:Class="SAM.Analytical.UI.WPF.CreateCaseByApertureWindow"
+﻿<Window x:Class="SAM.Analytical.UI.WPF.ApertureToPanelRatiosWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
         mc:Ignorable="d"
-        Title="Create Case By Aperture" Height="350" Width="600">
+        Title="Aperture to panel ratios" Height="300" Width="500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
         </Grid.RowDefinitions>
-        <local:CreateCaseByApertureControl x:Name="CreateCaseByApertureControl_Main" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0"/>
+        <local:ApertureToPanelRatiosControl x:Name="ApertureToPanelRatiosControl_Main" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0"/>
         <Button x:Name="button_Cancel" IsCancel="True" Content="Cancel" Grid.Row="1" Margin="0,10,10,10" Width="70" Click="button_Cancel_Click" HorizontalAlignment="Right"></Button>
         <Button x:Name="button_OK" Content="OK" Grid.Row="1" Margin="0,10,85,10" Click="button_OK_Click" HorizontalAlignment="Right" Width="70" />
     </Grid>
