--- a/WPF/SAM.Analytical.UI.WPF/Controls/MultipleCaseSimulationControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/MultipleCaseSimulationControl.xaml
@@ -1,15 +1,18 @@
-﻿<UserControl x:Class="SAM.Analytical.UI.WPF.CaseSimulationControl"
+﻿<UserControl x:Class="SAM.Analytical.UI.WPF.MultipleCaseSimulationControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="280" d:DesignWidth="300">
+             d:DesignHeight="600" d:DesignWidth="400">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"></RowDefinition>
+                <RowDefinition Height="30"></RowDefinition>
+                <RowDefinition Height="30"></RowDefinition>
+                <RowDefinition Height="200"></RowDefinition>
                 <RowDefinition Height="30"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
@@ -22,7 +25,22 @@
                 <TextBox x:Name="TextBox_Directory" Grid.Column="0" Margin="5,0,0,0" VerticalAlignment="Center" IsEnabled="False"/>
                 <Button x:Name="button_Browse" Content="Browse..." Grid.Column="1" Width="80" Margin="5,0,5,0" Click="button_Browse_Click" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             </Grid>
-            <Grid Grid.Row="2">
+            <Label Content="Files:" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,0,0"/>
+            <ListBox x:Name="ListBox_Main" Grid.Row="3" Margin="5,5,5,5" SelectionMode="Extended"/>
+            <Grid Grid.Row="4" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="200"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="0" Orientation="Horizontal">
+                    <Button x:Name="button_Files" Content="Files" Grid.Column="1" Width="80" Height="23" Margin="5,0,5,0" Click="button_Files_Click" />
+                    <Button x:Name="button_Directory" Content="Directory" Grid.Column="1" Width="80" Height="23" Margin="5,0,5,0" Click="button_Directory_Click" />
+                </StackPanel>
+                <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Button x:Name="button_Remove" Content="Remove" Grid.Column="1" Width="80" Height="23" Margin="5,0,5,0" Click="button_Remove_Click" />
+                </StackPanel>
+            </Grid>
+            <Grid Grid.Row="5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30"></RowDefinition>
                     <RowDefinition Height="30"></RowDefinition>
